Make "Show More" button fit in KDE HIG.

BUG: 272492