applet/nmpopup.cpp
@@ -202,7 +202,8 @@ void NMPopup::init()
     connect(m_connectionsButton, SIGNAL(clicked()), this, SLOT(manageConnections()));
 
     m_showMoreButton = new Plasma::PushButton(m_rightWidget);
-    m_showMoreButton->setCheckable(true);
+    // Do not use this according to KDE HIG. Bug #272492
+    //m_showMoreButton->setCheckable(true);
     m_showMoreButton->setSizePolicy(QSizePolicy::Fixed, QSizePolicy::Fixed);
     m_showMoreButton->setIcon(KIcon("list-add"));
     m_showMoreButton->setText(i18nc("show more button in the applet's popup", "Show More..."));
@@ -240,7 +241,8 @@ void NMPopup::init()
     connect(NetworkManager::notifier(), SIGNAL(deviceRemoved(const QString&)),
             SLOT(interfaceRemoved(const QString&)));
 
-    oldShowMore = true;
+    m_showMoreChecked = false;
+    m_oldShowMoreChecked = true;
     wicCount = 0; // number of wireless networks which user explicitly configured using the kcm module.
     foreach (RemoteActivatable *ra, m_activatables->activatables()) {
         RemoteWirelessInterfaceConnection * wic = qobject_cast<RemoteWirelessInterfaceConnection*>(ra);
@@ -252,8 +254,8 @@ void NMPopup::init()
             uncheckShowMore(ra);
         }
     }
-    oldShowMore = false;
-    showMore(oldShowMore);
+    m_oldShowMoreChecked = false;
+    showMore(m_oldShowMoreChecked);
 
     //setPreferredSize(640, 400);
 
@@ -494,7 +496,6 @@ void NMPopup::wirelessEnabledToggled(bool checked)
         NetworkManager::setWirelessEnabled(checked);
     }
     if (checked && NetworkManager::isNetworkingEnabled()) {
-//        showMore(false);
         m_showMoreButton->show();
     } else {
         m_showMoreButton->hide();
@@ -534,7 +535,6 @@ void NMPopup::networkingEnabledToggled(bool checked)
 #endif
     if (checked && NetworkManager::isWirelessHardwareEnabled() &&
                    NetworkManager::isWirelessEnabled()) {
-//        showMore(false);
         m_showMoreButton->show();
     } else {
         m_showMoreButton->hide();
@@ -666,8 +666,10 @@ void NMPopup::managerWwanHardwareEnabledChanged(bool enabled)
 
 void NMPopup::showMore()
 {
-    oldShowMore = m_showMoreButton->isChecked();
-    showMore(oldShowMore);
+    // Simulate button toggling.
+    m_showMoreChecked = !m_showMoreChecked;
+    m_oldShowMoreChecked = m_showMoreChecked;
+    showMore(m_oldShowMoreChecked);
 }
 
 void NMPopup::showMore(bool more)
@@ -675,11 +677,11 @@ void NMPopup::showMore(bool more)
     if (more) {
         m_showMoreButton->setText(i18nc("pressed show more button", "Show Less..."));
         m_showMoreButton->setIcon(KIcon("list-remove"));
-        m_showMoreButton->setChecked(true);
+        m_showMoreChecked = true;
         m_connectionList->setShowAllTypes(true, true); // also refresh list
     } else {
         m_showMoreButton->setText(i18nc("unpressed show more button", "Show More..."));
-        m_showMoreButton->setChecked(false);
+        m_showMoreChecked = false;
         m_connectionList->setShowAllTypes(false, true); // also refresh list
         m_showMoreButton->setIcon(KIcon("list-add"));
     }
@@ -697,7 +699,7 @@ void NMPopup::checkShowMore(RemoteActivatable * ra)
         if (wicCount > 0) {
             wicCount--;
         }
-        if (wicCount == 0 &&  !m_showMoreButton->isChecked()) {
+        if (wicCount == 0 &&  !m_showMoreChecked) {
             // There is no wireless network which the user had explicitly configured around,
             // so temporaly show all the others wireless networks available.
             showMore(true);
@@ -714,10 +716,10 @@ void NMPopup::uncheckShowMore(RemoteActivatable *ra)
             return;
         }
         wicCount++;
-        if (oldShowMore != m_showMoreButton->isChecked()) {
+        if (m_oldShowMoreChecked != m_showMoreChecked) {
             // One wireless network explicity configured by the user appeared, reset "Show More" button
             // state to the value before the checkShowMore method above took action.
-            showMore(oldShowMore);
+            showMore(m_oldShowMoreChecked);
         }
     }
 }
@@ -754,7 +756,7 @@ void NMPopup::toggleInterfaceTab()
     } else {
         m_leftLabel->setText(i18nc("title on the LHS of the plasmoid", "<h3>Interfaces</h3>"));
         m_connectionList->clearInterfaces();
-        showMore(oldShowMore);
+        showMore(m_oldShowMoreChecked);
         m_interfaceDetailsWidget->setUpdateEnabled(false);
         m_leftWidget->setCurrentIndex(0);
     }
